--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   firebase_analytics: ^10.10.7
   cached_network_image: ^3.3.1
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
